# example-rules-foreign-sharedlib

./: README.md  WORKSPACE
binary/: BUILD.bazel
shared/: BUILD.bazel
shared/src/: CMakeLists.txt
static/: BUILD.bazel
