# example code is taken from https://github.com/Akagi201/learning-cmake/tree/master/hello-world-lib
# for test only

load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

filegroup(
    name = "srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

cmake(
    name = "libhello",
    lib_source = ":srcs",
    out_shared_libs = select({
        "//conditions:default": ["libhello.so"],
    }),
)

cc_test(
    name = "test_libhello",
    srcs = ["hello_client.c"],
    deps = [":libhello"],
)
